new reference added

--- a/reference.bib
+++ b/reference.bib
@@ -77,4 +77,18 @@
   isbn      = {978-3-540-49055-5},
 }
 
+@InCollection{Doan2012,
+  author    = {AnHai Doan and Alon Halevy and Zachary Ives},
+  booktitle = {Principles of Data Integration},
+  publisher = {Morgan Kaufmann},
+  title     = {2 - Manipulating Query Expressions},
+  year      = {2012},
+  address   = {Boston},
+  editor    = {AnHai Doan and Alon Halevy and Zachary Ives},
+  isbn      = {978-0-12-416044-6},
+  pages     = {21-63},
+  doi       = {https://doi.org/10.1016/B978-0-12-416044-6.00002-8},
+  url       = {https://www.sciencedirect.com/science/article/pii/B9780124160446000028},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
