--- a/reference.bib
+++ b/reference.bib
@@ -117,4 +117,91 @@
   isbn      = {978-3-319-91662-0},
 }
 
+@Article{Spasic2023,
+  author   = {Mirko Spasić and Milena {Vujošević Janičić}},
+  journal  = {Journal of Web Semantics},
+  title    = {Solving the SPARQL query containment problem with SpeCS},
+  year     = {2023},
+  issn     = {1570-8268},
+  pages    = {100770},
+  volume   = {76},
+  abstract = {The query containment problem is a fundamental computer science problem which was originally defined for relational queries. With the growing popularity of the sparql query language, it became relevant and important in this new context: reliable and efficient sparql query containment solvers may have various applications within static analysis of queries, especially in the area of query optimizations and refactoring. In this paper, we present a new approach for solving the query containment problem in sparql. The approach is based on reducing the query containment problem to the satisfiability problem in first order logic. It covers a wide range of the sparql language constructs, including union of conjunctive queries, blank nodes, projections, subqueries, clauses from, filter, optional, graph, etc. It also covers containment under rdf schema entailment regime, and it can deal with the subsumption relation. We describe an implementation of the approach, an open source solver SpeCS and its thorough experimental evaluation on two relevant benchmarks, Query Containment Benchmark and SQCFramework. As a side result, SpeCS identified incorrect test cases within both benchmarks, which were manually checked, confirmed and fixed, resulting in better and more reliable benchmarks. The evaluation also shows that SpeCS is highly efficient and that compared to the state-of-the-art solvers, it gives more precise results in a shorter amount of time. In addition, SpeCS has the highest coverage of the supported language constructs.},
+  doi      = {https://doi.org/10.1016/j.websem.2022.100770},
+  keywords = {SPARQL, Query containment, FOL modeling, SMT solving, SpeCS solver},
+  url      = {https://www.sciencedirect.com/science/article/pii/S1570826822000543},
+}
+
+@InProceedings{9161435,
+  author    = {Spasić, Mirko and Janičić, Milena Vujošević},
+  booktitle = {2020 Zooming Innovation in Consumer Technologies Conference (ZINC)},
+  title     = {SpeCS — SPARQL Query Containment Solver},
+  year      = {2020},
+  month     = {May},
+  pages     = {31-35},
+  abstract  = {With increasing popularity and importance of Semantic Web and its application, SPARQL, as a standard language for querying RDF data, gains more importance and receives additional attention from both practitioners and researchers coming from various domains. In database world, the query containment problem is a fundamental problem, crucially important in verification and optimization of queries. In this paper, we present our work on developing SPECS, an efficient solver for this problem in SPARQL query language. Our approach reduces query containment problem to the satisfiability problem in theories of the first order logic, and exploits SMT solver Z3 for checking the constructed formula. We present an evaluation that shows that our solver is much faster and covers more language features than the other available state-of-the-art solvers.},
+  doi       = {10.1109/ZINC50678.2020.9161435},
+  keywords  = {Resource description framework;Benchmark testing;Databases;Database languages;Tools;Electronic mail;Standards;semantic web;SPARQL;query containment;query modeling;SMT solving;SPECS},
+}
+
+@Article{10.1145/1567274.1567278,
+  author     = {P\'{e}rez, Jorge and Arenas, Marcelo and Gutierrez, Claudio},
+  journal    = {ACM Trans. Database Syst.},
+  title      = {Semantics and complexity of SPARQL},
+  year       = {2009},
+  issn       = {0362-5915},
+  month      = sep,
+  number     = {3},
+  volume     = {34},
+  abstract   = {SPARQL is the standard language for querying RDF data. In this article, we address systematically the formal study of the database aspects of SPARQL, concentrating in its graph pattern matching facility. We provide a compositional semantics for the core part of SPARQL, and study the complexity of the evaluation of several fragments of the language. Among other complexity results, we show that the evaluation of general SPARQL patterns is PSPACE-complete. We identify a large class of SPARQL patterns, defined by imposing a simple and natural syntactic restriction, where the query evaluation problem can be solved more efficiently. This restriction gives rise to the class of well-designed patterns. We show that the evaluation problem is coNP-complete for well-designed patterns. Moreover, we provide several rewriting rules for well-designed patterns whose application may have a considerable impact in the cost of evaluating SPARQL queries.},
+  address    = {New York, NY, USA},
+  articleno  = {16},
+  doi        = {10.1145/1567274.1567278},
+  issue_date = {August 2009},
+  keywords   = {Complexity, RDF, SPARQL, query language, semantic Web},
+  numpages   = {45},
+  publisher  = {Association for Computing Machinery},
+  url        = {https://doi.org/10.1145/1567274.1567278},
+}
+
+@Article{Afrati2010,
+  author   = {Foto N. Afrati and Matthew Damigos and Manolis Gergatsoulis},
+  journal  = {Information Processing Letters},
+  title    = {Query containment under bag and bag-set semantics},
+  year     = {2010},
+  issn     = {0020-0190},
+  number   = {10},
+  pages    = {360-369},
+  volume   = {110},
+  abstract = {Conjunctive queries (CQs) are at the core of query languages encountered in many logic-based research fields such as AI, or database systems. The majority of existing work assumes set semantics but often in real applications the manipulation of duplicate tuples is required. One of the major problems that arises as part of advanced features of query optimization, data integration, query reformulation and many other research topics is testing for containment of such queries. In this work, we investigate the complexity of query containment problem for CQs under bag semantics (i.e. duplicate tuples are allowed in both the database and the results of queries) and under bag-set semantics (i.e. duplicates are allowed in the result of the queries but not in the database). We derive complexity results for these problems for five major subclasses of CQs; and we also find necessary conditions for CQ query containment. The general case of these problems remains open.},
+  doi      = {https://doi.org/10.1016/j.ipl.2010.02.017},
+  keywords = {Databases, Query containment, Conjunctive queries, Bag semantics, Bag-set semantics},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0020019010000517},
+}
+
+@InProceedings{Angles2016,
+  author    = {Angles, Renzo and Gutierrez, Claudio},
+  booktitle = {The Semantic Web -- ISWC 2016},
+  title     = {The Multiset Semantics of SPARQL Patterns},
+  year      = {2016},
+  address   = {Cham},
+  editor    = {Groth, Paul and Simperl, Elena and Gray, Alasdair and Sabou, Marta and Kr{\"o}tzsch, Markus and Lecue, Freddy and Fl{\"o}ck, Fabian and Gil, Yolanda},
+  pages     = {20--36},
+  publisher = {Springer International Publishing},
+  abstract  = {The paper determines the algebraic and logic structure of the multiset semantics of the core patterns of SPARQL. We prove that the fragment formed by AND, UNION, OPTIONAL, FILTER, MINUS and SELECT corresponds precisely to both, the intuitive multiset relational algebra (projection, selection, natural join, arithmetic union and except), and the multiset non-recursive Datalog with safe negation.},
+  isbn      = {978-3-319-46523-4},
+}
+
+@InProceedings{Montoya2015,
+  author    = {Montoya, Gabriela and Skaf-Molli, Hala and Molli, Pascal and Vidal, Maria-Esther},
+  booktitle = {The Semantic Web - ISWC 2015},
+  title     = {Federated SPARQL Queries Processing with Replicated Fragments},
+  year      = {2015},
+  address   = {Cham},
+  editor    = {Arenas, Marcelo and Corcho, Oscar and Simperl, Elena and Strohmaier, Markus and d'Aquin, Mathieu and Srinivas, Kavitha and Groth, Paul and Dumontier, Michel and Heflin, Jeff and Thirunarayan, Krishnaprasad and Thirunarayan, Krishnaprasad and Staab, Steffen},
+  pages     = {36--51},
+  publisher = {Springer International Publishing},
+  abstract  = {Federated query engines provide a unified query interface to federations of SPARQL endpoints. Replicating data fragments from different Linked Data sources facilitates data re-organization to better fit federated query processing needs of data consumers. However, existing federated query engines are not designed to support replication and replicated data can negatively impact their performance. In this paper, we formulate the source selection problem with fragment replication (SSP-FR). For a given set of endpoints with replicated fragments and a SPARQL query, the problem is to select the endpoints that minimize the number of tuples to be transferred. We devise the Fedra source selection algorithm that approximates SSP-FR. We implement Fedra in the state-of-the-art federated query engines FedX and ANAPSID, and empirically evaluate their performance. Experimental results suggest that Fedra efficiently solves SSP-FR, reducing the number of selected SPARQL endpoints as well as the size of query intermediate results.},
+  isbn      = {978-3-319-25007-6},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
